2007-08-07  Chris Howie <cdhowie@nerdshack.com>

	* gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs, gtk-gui/gui.stetic: Removed
	  MonoDevelop-specific strings.
	* gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs, gtk-gui/generated.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallerDialog.cs: Regenerated.
	* Mono.Addins.Gui/AddinManagerWindow.cs: Added static property for
	  the flag that hides install buttons.
	* Mono.Addins.Gui/AddinManagerDialog.cs: Implementation of the above
	  property.
	* icons/system-software-update.png: Added missing icon.

2007-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Don't try to install the assembly if gui is disabled.

2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs, gtk-gui/gui.stetic:
	  The OK button must be hidden by default.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Makefile.am, Mono.Addins.Gui.mdp: Sign the assembly.
	* Mono.Addins.Gui/AddinInstallerDialog.cs: Added missing (C) header.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs:
	  Updated.
	* gtk-gui/Mono.Addins.Gui.AddinInstallerDialog.cs, gtk-gui/gui.stetic,
	  Mono.Addins.Gui/AddinInstaller.cs,
	  Mono.Addins.Gui/AddinInstallerDialog.cs: Added an implementation of
	  IAddinInstaller.
	* Makefile.am, Mono.Addins.Gui.mdp: Added new files.
	* Mono.Addins.Gui/AddinInstallDialog.cs: Don't include markup in
	  translatable strings.

2007-05-25  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs, gtk-gui/gui.stetic: