@@ -26,7 +26,7 @@ namespace Mono.Addins.Gui {
         private Gtk.Button closebutton3;
         
         protected virtual void Build() {
-            Stetic.Gui.Initialize();
+            Stetic.Gui.Initialize(this);
             // Widget Mono.Addins.Gui.AddinInfoDialog
             this.Name = "Mono.Addins.Gui.AddinInfoDialog";
             this.Title = Mono.Unix.Catalog.GetString("Package");
