@@ -52,7 +52,7 @@ namespace Mono.Addins.Gui {
         private Gtk.Button btnClose;
         
         protected virtual void Build() {
-            Stetic.Gui.Initialize();
+            Stetic.Gui.Initialize(this);
             // Widget Mono.Addins.Gui.AddinManagerDialog
             this.Name = "Mono.Addins.Gui.AddinManagerDialog";
             this.Title = Mono.Unix.Catalog.GetString("Add-in Manager");
