@@ -1149,7 +1149,7 @@ asd
       </widget>
     </child>
   </widget>
-  <widget class="Gtk.Dialog" id="Mono.Addins.Gui.NewSiteDialog" design-size="576 247">
+  <widget class="Gtk.Dialog" id="Mono.Addins.Gui.NewSiteDialog" design-size="576 249">
     <property name="MemberName" />
     <property name="GeneratePublic">False</property>
     <property name="Title" translatable="yes">Add New Repository</property>
@@ -1162,6 +1162,7 @@ asd
       <widget class="Gtk.VBox" id="dialog-vbox11">
         <property name="MemberName" />
         <property name="Spacing">6</property>
+        <property name="BorderWidth">2</property>
         <child>
           <widget class="Gtk.VBox" id="vbox89">
             <property name="MemberName" />
@@ -1185,7 +1186,6 @@ asd
                 <property name="MemberName" />
                 <property name="CanFocus">True</property>
                 <property name="Label" translatable="yes">Register an on-line repository</property>
-                <property name="Active">True</property>
                 <property name="DrawIndicator">True</property>
                 <property name="HasLabel">True</property>
                 <property name="UseUnderline">True</property>
@@ -1234,6 +1234,7 @@ asd
                     <property name="CanFocus">True</property>
                     <property name="IsEditable">True</property>
                     <property name="InvisibleChar">●</property>
+                    <signal name="Changed" handler="OnUrlTextChanged" />
                   </widget>
                   <packing>
                     <property name="Position">2</property>
@@ -1354,7 +1355,7 @@ asd
       <widget class="Gtk.HButtonBox" id="dialog-action_area11">
         <property name="MemberName" />
         <property name="Spacing">10</property>
-        <property name="BorderWidth">6</property>
+        <property name="BorderWidth">5</property>
         <property name="Size">2</property>
         <property name="LayoutStyle">End</property>
         <child>
